# fontpreview

./: README.md
src/: .gitignore  CMakeLists.txt  resources.qrc  resources.rc
src/fontpreview/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
