CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(fontpreview C CXX)

CMAKE_POLICY(SET CMP0020 OLD)
CMAKE_POLICY(SET CMP0028 NEW)

IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/nxcommon/src/CMakeLists.txt")
    SET(NXCOMMON_BUILDING ON)
ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/nxcommon/src/CMakeLists.txt")

IF(NXCOMMON_BUILDING)
    MESSAGE(STATUS "Building integrated nxcommon.")
    ADD_SUBDIRECTORY(nxcommon/src nxcommon/build)
ENDIF()

IF(NOT TARGET nxcommon)
    FIND_PACKAGE(Nxcommon REQUIRED CONFIG)
ENDIF()

INCLUDE(NxUtilities)

FIND_PACKAGE(Qt5Gui CONFIG REQUIRED)
FIND_PACKAGE(Qt5Widgets CONFIG REQUIRED)

#FIND_PACKAGE(Freetype REQUIRED)

SET(LIBRARIES "")
SET(INCLUDES "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")

SET(LIBRARIES ${LIBRARIES} nxcommon)

SET(LIBRARIES ${LIBRARIES} Qt5::Gui Qt5::Widgets)
SET(INCLUDES ${INCLUDES} "${Qt5Gui_INCLUDE_DIRS}")

#SET(LIBRARIES ${LIBRARIES} "${FREETYPE_LIBRARIES}")
#SET(INCLUDES ${INCLUDES} "${FREETYPE_INCLUDE_DIRS}")

SET(SRCS "")
SET(MOC_SRCS "")
SET(UIC_SRCS "")
SET(INCS "")

ADD_SUBDIRECTORY(fontpreview)

SET(INCLUDES ${INCLUDES} ${INCS})

INCLUDE_DIRECTORIES(${INCLUDES})

QT5_WRAP_CPP(MOC_COMPILED_SRCS ${MOC_SRCS})
QT5_WRAP_UI(UIC_COMPILED_SRCS ${UIC_SRCS})
QT5_ADD_RESOURCES(QT_RESOURCE_FILES "${CMAKE_SOURCE_DIR}/resources.qrc")

IF(WIN32)
    ADD_SOURCES(resources.rc)
ENDIF()

ADD_COMPILE_OPTIONS(--std=c++11)
ADD_EXECUTABLE(fontpreview ${SRCS} ${MOC_COMPILED_SRCS} ${UIC_COMPILED_SRCS} ${QT_RESOURCE_FILES})

IF(WIN32)
    SET_PROPERTY(TARGET fontpreview PROPERTY WIN32_EXECUTABLE TRUE)
ENDIF()

TARGET_LINK_LIBRARIES(fontpreview ${LIBRARIES})
